# trailbot

./: README.md  Taskfile.yml  pyproject.toml
.github/workflows/: checks.yml  release.yml
tests/: test_version.py
trailbot/: __main__.py  cli.py  device.py  version.py
trailbot/commands/: download.py  version.py
