[tool.poetry]
name = "trailbot"
version = "0.0.0"
description = "A tool for automatically downloading images and video from trail cameras."
license = "BSD-2-Clause"
authors = [
	"Chris Gavin <chris@chrisgavin.me>",
]
repository = "https://github.com/chrisgavin/trailbot/"

[tool.poetry.dependencies]
click = { version="*" }
python = ">=3.8,<4"
versio = { version="*" }
gatt = "^0.2.7"
dbus-python = "^1.3.2"
pygobject = "^3.42.2"
python-networkmanager = "^2.2"
requests = "^2.29.0"
beautifulsoup4 = "^4.11.1"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
flake8 = { version="*" }
mypy = { version="*" }
pytest = { version="*" }
pytest-github-actions-annotate-failures = { version = "*", optional = true }

[tool.poetry.scripts]
trailbot = "trailbot.__main__:main"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.7"

[build-system]
requires = [
	"poetry>=0.12",
]
build-backend = "poetry.masonry.api"
